# uptag

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  release.md
.github/workflows/: ci.yml  test.yml
examples/: README.md  email-report.sh.template
proptest-regressions/: image.txt  version_extractor.txt  version_format.txt
src/: docker_compose.rs  dockerfile.rs  from_statement.rs  image.rs  image_name.rs  info.rs  lib.rs  main.rs  matches.rs  pattern.rs  pattern_parser.rs  report.rs  tag_fetcher.rs  version.rs  version_extractor.rs  version_format.rs
src/report/: docker_compose.rs  mod.rs
