[package]
name = "uptag"
version = "1.0.0"
authors = ["Y0hy0h <Y0hy0h@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
regex = { version = "1.3.9", default-features = false, features = ["std", "perf"] }
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
serde = { version = "1.0.114", features = ["derive"] }
log = "0.4.8"
env_logger = "0.7.1"
structopt = "0.3.15"
itertools = "0.9.0"
lazy_static = "1.4.0"
anyhow = "1.0.31"
thiserror = "1.0.20"
serde_yaml = "0.8.13"
indexmap = { version = "1.4.0", features = ["serde-1"] }
nom = "5.1.2"
marked-yaml = "0.1.0"
indicatif = "0.15.0"

[target.'cfg(windows)'.dependencies]
# indicatif v0.15.0 uses a version of winapi-util that fails to compile, so we specify a newer version
winapi-util = "0.1.5"

[dev-dependencies]
proptest = "0.10.0"

[profile.release]
lto = true
