[package]
name = "uptag"
version = "1.0.1"
authors = ["Y0hy0h <Y0hy0h@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
regex = { version = "1.4.3", default-features = false, features = ["std", "perf"] }
reqwest = { version = "0.11.1", features = ["blocking", "json"] }
serde = { version = "1.0.123", features = ["derive"] }
log = "0.4.14"
env_logger = "0.8.3"
structopt = "0.3.21"
itertools = "0.10.0"
lazy_static = "1.4.0"
anyhow = "1.0.38"
thiserror = "1.0.24"
serde_yaml = "0.8.13"
indexmap = { version = "1.6.1", features = ["serde-1"] }
nom = "6.1.2"
marked-yaml = "0.1.0"
indicatif = "0.15.0"

[dev-dependencies]
proptest = "1.0.0"

[profile.release]
lto = true
