[package]
name = "uptag"
version = "1.0.2"
authors = ["Y0hy0h <Y0hy0h@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
regex = { version = "1.5.6", default-features = false, features = ["std", "perf"] }
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.0"
structopt = "0.3.26"
itertools = "0.10.3"
lazy_static = "1.4.0"
anyhow = "1.0.57"
thiserror = "1.0.31"
serde_yaml = "0.8.24"
indexmap = { version = "1.8.2", features = ["serde-1"] }
nom = "7.1.1"
marked-yaml = "0.2.0"
indicatif = "0.16.2"

[dev-dependencies]
proptest = "1.0.0"

[profile.release]
lto = true
